@@ -40,7 +40,7 @@ public class Card5_101 extends AbstractPermanent {
 
     @Override
     public List<? extends Modifier> getInPlayModifiers(LotroGame game, PhysicalCard self) {
-        return Arrays.asList(
+        return List.of(
                 new TwilightCostModifier(self, CardType.SITE, null,
                         new Evaluator() {
                             @Override
